--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
 
 <head>
 
-	<title></title>
-	<meta charset="utf-8">
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<link rel="stylesheet" href="https://use.fontawesome.com/a304bad23c.css">
-	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="css/style.css">
+  <title></title>
+  <meta charset="utf-8">
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/a304bad23c.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 
 <body>
+
+  <header>
+    
+    <div class="container">
+
+      <div class="row">SALUT</div>
+    
+    </div>
+
+  </header>
 
 </body>
 </html>
