--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
   <header>
     
-    <div class="container">
+    <div style="text-align: center; height: 100%; display: block;" class="byellow">
 
-      <div class="row">SALUT</div>
+      <div style="font-size: xx-large;">Palm Parts</div>
     
     </div>
 
