--- a/index.html
+++ b/index.html
@@ -15,16 +15,8 @@
 
 
 <body>
-
-  <header>
-    
-    <div style="text-align: center; height: 100%; display: block;" class="byellow">
-
-      <div style="font-size: xx-large;">Palm Parts</div>
-    
-    </div>
-
-  </header>
-
+<div>
+  <p class="byellow">Palm parts</p>
+</div>
 </body>
 </html>
